# SolitaireGL

./: CMakeLists.txt  LICENSE.txt  README.md  flake.nix  shell.nix
Game/: deck_of_cards.cpp  deck_of_cards.hpp  main.cpp
